--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My learning</p>
+            <!-- <p>My Learning</p> -->
+             <div class="mylearning">
+                <p>My learning</p>
+             <div class="mylearning__popup">
+                <p>You did not purchase anything yet</p>
+             </div>
+            </div>
+
             <i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
@@ -49,6 +56,10 @@
     <!--saleimage-->
     <div class="sale-image">
         <img src="./images/Sale image.png" alt="sale image">
+        <div class="sale-image__offer">
+            <h2>Udemy Flash Sale! 24 hours to save.</h2>
+            <p>Get the top courses for just 499.Just one day to save but a lifetime to learn</p>
+        </div>
     </div>
 
     <!--recomended-->
