--- a/index.html
+++ b/index.html
@@ -19,190 +19,193 @@
 
 <body>
     <div class="container">
-    <!--navbar-->
-    <div class="navbar">
-        <div class="navbar__s1">
-            <h1>Udemy</h1>
-        </div>
-        <div class="navbar__s2">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <input placeholder="search for anything here.Tech,Buisness,Art...">
-        </div>
-        <div class="navbar__s3">
-            <p>Courses</p>
-            <!-- <p>My Learning</p> -->
-             <div class="mylearning">
-                <p>My learning</p>
-             <div class="mylearning__popup">
-                <p>You did not purchase anything yet</p>
-             </div>
+        <!--navbar-->
+        <div class="navbar">
+            <div class="navbar__s1">
+                <h1>Udemy</h1>
             </div>
 
-            <i class="fa-solid fa-cart-shopping"></i>
-            <i class="fa-solid fa-bell"></i>
-            <i class="fa-solid fa-user"></i>
-        </div>
-    </div>
+            <div class="navbar__s2">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input placeholder="search for anything here.Tech,Buisness,Art...">
+            </div>
 
-    <!--categories-->
-    <div class="categories">
-        <p>Developement</p>
-        <p>Buissness</p>
-        <p>IT and software</p>
-        <p>Personal Developement</p>
-        <p>Marketing</p>
-    </div>
+            <div class="navbar__s3">
+                <p>Courses</p>
+                <!-- My Learning-->
+                <div class="mylearning">
+                    <p>My learning</p>
+                    <div class="mylearning__popup">
+                        <p>You did not purchase anything yet</p>
+                    </div>
+                </div>
 
-    <!--saleimage-->
-    <div class="sale-image">
-        <img src="./images/Sale image.png" alt="sale image">
-        <div class="sale-image__offer">
-            <h2>Udemy Flash Sale! 24 hours to save.</h2>
-            <p>Get the top courses for just 499.Just one day to save but a lifetime to learn</p>
-        </div>
-    </div>
 
-    <!--recomended-->
-    <div class="recommended">
-        <h1 class="recommended__title">Recomended for you</h1>
-        <p>Pick the best fit</p>
-        <div class="recommended__container">
-            <div class="course-card">
-                <img src="./images/c1.jpg">
-                <h3>2023 Python Data Visualization Masterclass</h3>
-                <p>cot steele</p>
-                <p>4.9⭐⭐⭐⭐</p>
-                <p>449 <del>1999</del></p>
-            </div>
-            <div class="course-card">
-                <img src="./images/c2.jpg">
-                <h3>Web Developement bootcamp 2023</h3>
-                <p>cot steele</p>
-                <p>3.9 ⭐⭐⭐</p>
-                <p>449 <del>1999</del></p>
-            </div>
-            <div class="course-card">
-                <img src="./images/c3.jpg">
-                <h3>Master UI/UX designing with sigma</h3>
-                <p>cot steele</p>
-                <p>2.9⭐⭐</p>
-                <p>449 <del>1999</del></p>
-            </div>
-            <div class="course-card">
-                <img src="./images/c4.jpg">
-                <h3>2023 Basic to Advance with EMC</h3>
-                <p>cot steele</p>
-                <p>4.9 ⭐⭐⭐⭐</p>
-                <p>449 <del>1999</del></p>
+                <i class="fa-solid fa-cart-shopping"></i>
+                <i class="fa-solid fa-bell"></i>
+                <i class="fa-solid fa-user"></i>
             </div>
         </div>
-    </div>
 
-    <!--Topics-->
-    <div class="topics">
-        <h1 class="topics__title">Topics recommended for you</h1>
-        <div class="topics__container">
-            <p>website</p>
-            <p>Javascript</p>
-            <p>Css</p>
-            <p>Aws</p>
-            <p>Mongo db</p>
-            <p>Azure</p>
-            <p>Docker</p>
-            <p>Github</p>
-            <p>React js</p>
+        <!--categories-->
+        <div class="categories">
+            <p>Developement</p>
+            <p>Buissness</p>
+            <p>IT and software</p>
+            <p>Personal Developement</p>
+            <p>Marketing</p>
         </div>
-    </div>
 
-    <!-- popular section-->
-    <div class="popular">
-        <h1 class="popular__title">Most popular</h1>
-        <p class="popular__subtitle">pick the best fit</p>
-        <div class="popular__container">
+        <!--saleimage-->
+        <div class="sale-image">
+            <img src="./images/Sale image.png" alt="sale image">
+            <div class="sale-image__offer">
+                <h2>Udemy Flash Sale! 24 hours to save.</h2>
+                <p>Get the top courses for just 499.Just one day to save but a lifetime to learn</p>
+            </div>
+        </div>
 
-            <div class="course-card">
-                <img src="./images/c4.jpg">
-                <h3>2023 Python Data Visualization Masterclass</h3>
-                <p>cot steele</p>
-                <p>4.9⭐⭐⭐⭐</p>
-                <p>449 <del>1999</del></p>
-            </div>
-            <div class="course-card">
-                <img src="./images/c3.jpg">
-                <h3>Web Developement bootcamp 2024</h3>
-                <p>cot steele</p>
-                <p>3.9 ⭐⭐⭐</p>
-                <p>449 <del>1999</del></p>
-            </div>
-            <div class="course-card">
-                <img src="./images/c2.jpg">
-                <h3>Master UI/UX designing with sigma</h3>
-                <p>cot steele</p>
-                <p>2.9⭐⭐</p>
-                <p>449 <del>1999</del></p>
-            </div>
-            <div class="course-card">
-                <img src="./images/c1.jpg">
-                <h3>2023 Basic to Advance with EMC</h3>
-                <p>cot steele</p>
-                <p>4.9 ⭐⭐⭐⭐</p>
-                <p>449 <del>1999</del></p>
-            </div>
-            <div class="course-card">
-                <img src="./images/c2.jpg">
-                <h3>Master UI/UX designing with sigma</h3>
-                <p>cot steele</p>
-                <p>2.9⭐⭐</p>
-                <p>449 <del>1999</del></p>
-            </div>
-            <div class="course-card">
-                <img src="./images/c1.jpg">
-                <h3>2023 Basic to Advance with EMC</h3>
-                <p>cot steele</p>
-                <p>4.9 ⭐⭐⭐⭐</p>
-                <p>449 <del>1999</del></p>
-            </div>
-            <div class="course-card">
-                <img src="./images/c4.jpg">
-                <h3>2023 Python Data Visualization Masterclass</h3>
-                <p>cot steele</p>
-                <p>4.9⭐⭐⭐⭐</p>
-                <p>449 <del>1999</del></p>
-            </div>
-            <div class="course-card">
-                <img src="./images/c3.jpg">
-                <h3>Web Developement bootcamp 2023</h3>
-                <p>cot steele</p>
-                <p>3.9 ⭐⭐⭐</p>
-                <p>449 <del>1999</del></p>
-            </div>
-        
-        </div>
-    
-    </div>  
-    <!--Footer-->
-    <div class="footer">
-        <div class="footer__1">
-            <div class="footer__1__s1">
-                <p>Udemy Buissness</p>
-                <p>Teach on Udemy</p>
-                <p>Get the app</p>
-                <p>About us</p>
-                <p>Contact us</p>
-            </div>
-            <div class="footer__1__s2">
-                <p>Career</p>
-                <p>Blog</p>
-                <p>Help and support</p>
-                <p>Affiliate</p>
-                <p>inventors</p>
+        <!--recomended-->
+        <div class="recommended">
+            <h1 class="recommended__title">Recomended for you</h1>
+            <p>Pick the best fit</p>
+            <div class="recommended__container">
+                <div class="course-card">
+                    <img src="./images/c1.jpg">
+                    <h3>2023 Python Data Visualization Masterclass</h3>
+                    <p>cot steele</p>
+                    <p>4.9⭐⭐⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
+                <div class="course-card">
+                    <img src="./images/c2.jpg">
+                    <h3>Web Developement bootcamp 2023</h3>
+                    <p>cot steele</p>
+                    <p>3.9 ⭐⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
+                <div class="course-card">
+                    <img src="./images/c3.jpg">
+                    <h3>Master UI/UX designing with sigma</h3>
+                    <p>cot steele</p>
+                    <p>2.9⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
+                <div class="course-card">
+                    <img src="./images/c4.jpg">
+                    <h3>2023 Basic to Advance with EMC</h3>
+                    <p>cot steele</p>
+                    <p>4.9 ⭐⭐⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
             </div>
         </div>
-        <div class="footer__2">
-            <h1>Udemy</h1>
-            <p>&copy;Udemy,Inc</p>
+
+        <!--Topics-->
+        <div class="topics">
+            <h1 class="topics__title">Topics recommended for you</h1>
+            <div class="topics__container">
+                <p>website</p>
+                <p>Javascript</p>
+                <p>Css</p>
+                <p>Aws</p>
+                <p>Mongo db</p>
+                <p>Azure</p>
+                <p>Docker</p>
+                <p>Github</p>
+                <p>React js</p>
+            </div>
         </div>
-    </div>
+
+        <!-- popular section-->
+        <div class="popular">
+            <h1 class="popular__title">Most popular</h1>
+            <p class="popular__subtitle">pick the best fit</p>
+            <div class="popular__container">
+
+                <div class="course-card">
+                    <img src="./images/c4.jpg">
+                    <h3>2023 Python Data Visualization Masterclass</h3>
+                    <p>cot steele</p>
+                    <p>4.9⭐⭐⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
+                <div class="course-card">
+                    <img src="./images/c3.jpg">
+                    <h3>Web Developement bootcamp 2024</h3>
+                    <p>cot steele</p>
+                    <p>3.9 ⭐⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
+                <div class="course-card">
+                    <img src="./images/c2.jpg">
+                    <h3>Master UI/UX designing with sigma</h3>
+                    <p>cot steele</p>
+                    <p>2.9⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
+                <div class="course-card">
+                    <img src="./images/c1.jpg">
+                    <h3>2023 Basic to Advance with EMC</h3>
+                    <p>cot steele</p>
+                    <p>4.9 ⭐⭐⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
+                <div class="course-card">
+                    <img src="./images/c2.jpg">
+                    <h3>Master UI/UX designing with sigma</h3>
+                    <p>cot steele</p>
+                    <p>2.9⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
+                <div class="course-card">
+                    <img src="./images/c1.jpg">
+                    <h3>2023 Basic to Advance with EMC</h3>
+                    <p>cot steele</p>
+                    <p>4.9 ⭐⭐⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
+                <div class="course-card">
+                    <img src="./images/c4.jpg">
+                    <h3>2023 Python Data Visualization Masterclass</h3>
+                    <p>cot steele</p>
+                    <p>4.9⭐⭐⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
+                <div class="course-card">
+                    <img src="./images/c3.jpg">
+                    <h3>Web Developement bootcamp 2023</h3>
+                    <p>cot steele</p>
+                    <p>3.9 ⭐⭐⭐</p>
+                    <p>449 <del>1999</del></p>
+                </div>
+
+            </div>
+
+        </div>
+        <!--Footer-->
+        <div class="footer">
+            <div class="footer__1">
+                <div class="footer__1__s1">
+                    <p>Udemy Buissness</p>
+                    <p>Teach on Udemy</p>
+                    <p>Get the app</p>
+                    <p>About us</p>
+                    <p>Contact us</p>
+                </div>
+                <div class="footer__1__s2">
+                    <p>Career</p>
+                    <p>Blog</p>
+                    <p>Help and support</p>
+                    <p>Affiliate</p>
+                    <p>inventors</p>
+                </div>
+            </div>
+            <div class="footer__2">
+                <h1>Udemy</h1>
+                <p>&copy;Udemy,Inc</p>
+            </div>
+        </div>
     </div>
 </body>
 
