--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
                     </div>
                 </div>
 
-
                 <i class="fa-solid fa-cart-shopping"></i>
                 <i class="fa-solid fa-bell"></i>
                 <i class="fa-solid fa-user"></i>
+            </div>
+
+            <div class="navbar__s4">
+                <i class="fa-solid fa-bars"></i>
             </div>
         </div>
 
@@ -152,28 +155,28 @@
                     <p>449 <del>1999</del></p>
                 </div>
                 <div class="course-card">
-                    <img src="./images/c2.jpg">
+                    <img src="./images/c3.jpg">
                     <h3>Master UI/UX designing with sigma</h3>
                     <p>cot steele</p>
                     <p>2.9⭐⭐</p>
                     <p>449 <del>1999</del></p>
                 </div>
                 <div class="course-card">
-                    <img src="./images/c1.jpg">
+                    <img src="./images/c4.jpg">
                     <h3>2023 Basic to Advance with EMC</h3>
                     <p>cot steele</p>
                     <p>4.9 ⭐⭐⭐⭐</p>
                     <p>449 <del>1999</del></p>
                 </div>
                 <div class="course-card">
-                    <img src="./images/c4.jpg">
+                    <img src="./images/c1.jpg">
                     <h3>2023 Python Data Visualization Masterclass</h3>
                     <p>cot steele</p>
                     <p>4.9⭐⭐⭐⭐</p>
                     <p>449 <del>1999</del></p>
                 </div>
                 <div class="course-card">
-                    <img src="./images/c3.jpg">
+                    <img src="./images/c2.jpg">
                     <h3>Web Developement bootcamp 2023</h3>
                     <p>cot steele</p>
                     <p>3.9 ⭐⭐⭐</p>
